# github-sentinel

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README-EN.md  README.md  RELEASE_NOTES.md  docker-compose.yml  env.example  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  dashboard.py  health.py  reports.py  subscriptions.py  wecom.py
app/core/: config.py  errors.py  logging.py
app/db/: base.py  migrations.py  models.py  session.py
app/repositories/: events.py  notifications.py  reports.py  subscriptions.py  users.py
app/schemas/: auth.py  reports.py  responses.py  subscriptions.py
app/services/: auth.py  github_client.py  llm.py  notification_worker.py  notifications.py  reporting.py  repository_url.py  scheduler.py  sentinel.py  time_utils.py  tokens.py  wecom_callback.py
app/ui/: __init__.py  gradio_app.py
config/: settings.toml
data/: github_sentinel.db-shm  github_sentinel.db-wal
deploy/nginx/: github-sentinel.conf
scripts/: dev.py
tests/: conftest.py  test_auth.py  test_config.py  test_dashboard.py  test_github_client.py  test_gradio_ui.py  test_health.py  test_llm.py  test_logging_config.py  test_migrations.py  test_notification_worker.py  test_notifications.py  test_report_management.py  test_reports.py  test_repository_event_filter.py  test_repository_events.py  test_run_subscription_endpoint.py  test_scheduler.py  test_sentinel_agent.py  test_subscriptions.py  test_wecom_callback.py
