[project]
name = "github-sentinel"
version = "0.0.3"
description = "用于订阅 GitHub/Gitee 仓库、抓取更新、生成报告并推送通知的开源 AI Agent 工具。"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "aiosqlite>=0.20.0",
  "cryptography>=48.0.0",
  "fastapi>=0.111.0",
  "gradio>=5.0.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
